add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(HelloNew)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(CFGuard)
add_subdirectory(Culry)
add_subdirectory(Test1)
add_subdirectory(Test2)

add_subdirectory(OpCodeCounter)
add_subdirectory(AddInfo)
add_subdirectory(ReadInfo)
add_subdirectory(ValueNumbering)
add_subdirectory(AddStr)
